syntax = "proto3";

package proto;
option go_package = "github.com/DuongVu98/passnet-authentication/proto";

service EventProducer {
    rpc ProduceUserRegisteredEvent(UserRegisteredEvent) returns (SagaResponse) {}
}

message SagaResponse {
    string message = 1;
}

message UserRegisteredEvent {
    string uid = 1;
    string username = 2;
    string email = 3;
    string firstName = 4;
    string lastName = 5;
}